fix too much goofyness

--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@ h1 {
 }
 
 h1:hover {
-    transform: scale(10.1);
-    color: #ff6347;
+    transform: scale(2.1);
+    color: #151515;
 }
 
 
